# titanic-ml-project

./: Makefile  Pipfile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/exploration/: 1.0 - initial-data-exploration.ipynb
