[tool.poetry]
name = "titanic-ml-project"
version = "0.1.0"
description = "Esse projeto tem a finalidade de criar um modelo machine leaning para identificar a probabilidade de uma determinada pessoa, baseada em suas caracteristicas sobrevivier a trajedia do titanic"
authors = ["Espedito Ferreira Alves <Espeditoalves123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
